--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                 </div>
                 <div class="gallery-caption">
                     <h3>Step 5</h3>
-                    <p>Mulai Simulasi Ujian, untuk soal Audio hanya dapat di putar 2 kali<br>Catatan:<br>Klik Tombol 1 kali tunggu Audio sampai selesai diputar, dan ulangi lagi, jangan Klik Tombol Audio 2 kali secara beruntuntun, karena akan dianggap sudah 2 kali di putar, kami berusaha untuk memberikan fitur semirip mungkin dengan yang aslinya.</p>
+                    <p>Mulai Simulasi Ujian, untuk soal Audio hanya dapat di putar 2 kali<br>Catatan:<br>Klik Tombol 1 kali tunggu Audio sampai selesai diputar, dan ulangi lagi (jika diperlukan), jangan Klik Tombol Audio 2 kali secara beruntun, karena system akan menganggap sudah diputar 2 kali, kami berusaha untuk memberikan fitur yang semirip mungkin dengan yang aslinya.</p>
                 </div>
             </div>
 
@@ -312,7 +312,7 @@
                 </div>
                 <div class="gallery-caption">
                     <h3>Step 7</h3>
-                    <p>Jika selesai akan ditampilkan nilai, geser ke bawah ada tombol Review.</p>
+                    <p>Jika selesai akan ditampilkan nilai, dan klik tombol Review untuk memulai pembahasan.</p>
                 </div>
             </div>
 
