--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                 </div>
                 <div class="gallery-caption">
                     <h3>Step 2</h3>
-                    <p>Masukan Email dan Password lalu pilih Daftar, lakukan Pembayaran lalu kirimkan bukti Pembayaran dan Email yang anda Daftarkan ke Whatsapp 081313505850, setelah di Verifikasi anda akan menerima Email berisi Link untuk me-Reset Password, klik Link lalu masukan ulang Password anda, Selesai.</p>
+                    <p>Masukan Email dan Password lalu pilih Daftar,<br>Untuk Verifikasi silahkan hubungi WhatsApp: 0895-3701-31199, Admin akan mengirimkan Email berisi Link untuk Reset Password,<br>Buka Kotak Masuk/Spam pada Email anda, lalu klik pada Link tersebut dan masukan ulang atau ganti Password anda, Selesai</p>
                 </div>
             </div>
 
@@ -292,7 +292,7 @@
                 </div>
                 <div class="gallery-caption">
                     <h3>Step 5</h3>
-                    <p>Mulai Simulasi Ujian, untuk soal Audio hanya dapat di putar 2 kali<br>Catatan:<br>Klik Tombol 1 kali tunggu Audio sampai selesai diputar, dan ulangi lagi (jika diperlukan), jangan Klik Tombol Audio 2 kali secara beruntun, karena system akan menganggap sudah diputar 2 kali, kami berusaha untuk memberikan fitur yang semirip mungkin dengan yang aslinya.</p>
+                    <p>Mulai Simulasi Ujian, untuk soal Audio hanya dapat di putar 2 kali<br>Catatan:<br>Klik Tombol 1 kali tunggu Audio sampai selesai diputar, dan ulangi lagi (jika diperlukan), jangan Klik Tombol Audio 2 kali secara beruntun, karena system akan menganggap sudah diputar 2 kali, kami berusaha untuk memberikan fitur yang semirip mungkin dengan yang aslinya, agar terlatih dengan ketelitian, Jika waktu tersisa 5 menit akan muncul pemberitahuan.</p>
                 </div>
             </div>
 
@@ -302,7 +302,7 @@
                 </div>
                 <div class="gallery-caption">
                     <h3>Step 6</h3>
-                    <p>Untuk memilih soal yang akan dikerjakan terlebih dahulu.</p>
+                    <p>Silahkan pilih soal yang akan dikerjakan terlebih dahulu.</p>
                 </div>
             </div>
 
@@ -312,7 +312,7 @@
                 </div>
                 <div class="gallery-caption">
                     <h3>Step 7</h3>
-                    <p>Jika selesai akan ditampilkan nilai, dan klik tombol Review untuk memulai pembahasan.</p>
+                    <p>Jika selesai klik Finish, dan jika Ujian belum selesai tetapi waktu sudah habis maka Ujian akan berhenti otomatis dan akan menampilkan nilai, klik tombol Review untuk memulai pembahasan.</p>
                 </div>
             </div>
 
