--- a/page2.html
+++ b/page2.html
@@ -162,14 +162,14 @@
                 </div>
             </div>
 
-            <a href="https://wa.me/qr/L74YFRPDWD47M1" target="_blank" class="contact-item"
+            <a href="https://wa.me/message/N5GHIPHZ3S3HA1" target="_blank" class="contact-item"
                 style="text-decoration: none; color: inherit;">
                 <div class="contact-icon">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp Icon">
                 </div>
                 <div class="contact-info">
                     <h3>WhatsApp</h3>
-                    <p>+62 813 1350 5850</p>
+                    <p>+62 895 3701 31199</p>
                 </div>
             </a>
 
